[gd_scene load_steps=15 format=2]

[ext_resource path="res://platform_metroidvania asset pack v1.01/enemies sprites/goblin_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Goblin/GoblinFSM.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Goblin/Goblin.gd" type="Script" id=3]
[ext_resource path="res://HitBox.gd" type="Script" id=4]
[ext_resource path="res://UI/AudioRandomizer.gd" type="Script" id=5]
[ext_resource path="res://Sounds/HurtPlayerSound.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.86951, 7.26351 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.765
height = 3.10405

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 86.3423, 2.61789 )

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.9
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "dead"
length = 0.9
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=8]
length = 0.9
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[node name="Goblin" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 3 )
speed = 40

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 5
hframes = 6
frame = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 9.12758, 2.69088 )
shape = SubResource( 2 )
disabled = true

[node name="Sound" type="AudioStreamPlayer" parent="HitBox"]
stream = ExtResource( 6 )
script = ExtResource( 5 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 0.157669, 0.367891 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 4 )
anims/dead = SubResource( 5 )
anims/hurt = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/run = SubResource( 8 )

[node name="ChangeDirectionTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="FloorRayCasts" type="Node2D" parent="."]
visible = false

[node name="LeftRayCast" type="RayCast2D" parent="FloorRayCasts"]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( 0, 8 )

[node name="RightRayCast" type="RayCast2D" parent="FloorRayCasts"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, 8 )

[node name="WallRayCasts" type="Node2D" parent="."]

[node name="LeftRayCast" type="RayCast2D" parent="WallRayCasts"]
enabled = true
cast_to = Vector2( -8, 0 )

[node name="RightRayCast" type="RayCast2D" parent="WallRayCasts"]
enabled = true
cast_to = Vector2( 8, 0 )

[node name="AttackRayCasts" type="Node2D" parent="."]
visible = false

[node name="LeftRayCast" type="RayCast2D" parent="AttackRayCasts"]
enabled = true
cast_to = Vector2( -8, 0 )
collision_mask = 2

[node name="RightRayCast" type="RayCast2D" parent="AttackRayCasts"]
enabled = true
cast_to = Vector2( 8, 0 )
collision_mask = 2
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_ChangeDirectionTimer_timeout"]
